jsDom.css
#buttonBox{
    background-color: antiquewhite;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    position: fixed;
    top: 25vw;
}

#boxSubDiv{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

#button{
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 1.8vw;
    background: #68b3d9;
    padding: 1vw;
    width: 6vw;
    height: 3.3vw;
    margin: 0.7vw;
    font-size: 1.5vw;
}

#button:hover{
    background: #1d5c7b;
}

#img{
    width: 15vw;
    margin: 0.5vw;
}

#content{
    display: flex;
}

body{
    background-color: white;
}

#time{
    display: none;
    font-size: 1.4vw;
    margin-top: 0.25vw;
    margin-bottom: 0.2vw;
}

#goodWibes{
    display: none;
    font-size: 2vw;
    margin-bottom: 0.5vw;
    margin-top: 0.5vw;
}

#itemHolder{
    display: flex;
    flex-direction: column;
}

#message{
    display: none;
    color: gold;
    font-size: 1.4vw;
    position: fixed;
    top: 44.5vw;
}

